<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/txt1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/name"
       android:textSize="30sp"
       android:textStyle="bold"
       android:layout_marginHorizontal="20dp"
       android:layout_marginStart="20dp"
       android:layout_marginTop="50dp" />
    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/txt1"
         />
    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/txt2"
         />
    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/txt3"
        android:layout_marginTop="50dp"
         />
    <TextView
        android:id="@+id/txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/txt4"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="40sp"
        android:textStyle="bold"/>

</RelativeLayout>