<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/txtName"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtCollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_name1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/txtEmail"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/txtCollege"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address11"
        android:textSize="35sp"
        android:layout_below="@id/txtCourse"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"/>
<Button
    android:id="@+id/btnSubmit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:textSize="40sp"
    android:textStyle="bold"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="30dp"/>
    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtName"
        android:ems="15"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_toRightOf="@id/txtEmail"
        android:ems="15"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_toRightOf="@id/txtCollege"
        android:ems="15"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/et4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtCourse"
        android:layout_below="@id/txtCollege"
        android:ems="15"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/et5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtAddress"
        android:layout_below="@id/txtCourse"
        android:ems="15"
        android:layout_marginTop="20dp"/>


</RelativeLayout>